Code Refinements anf Bug fixing